Fix entry text spacing

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -357,7 +357,7 @@ article {
         margin-bottom: $spacing-unit;
         min-width: $entry-w;
         height: auto;
-        margin-right: 7%; /* Instead of 4% to give more space on the RIGHT to the paragraph */
+        margin-right: 5% !important; /* Instead of 4% to give more space on the RIGHT to the paragraph */
         padding-left: 2%;
         max-height: none;
     }
